the first fixing bugs

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/base/reset.css">
+    <link rel="stylesheet" href="../css/base/reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Navigation</title>
 </head>
@@ -13,19 +13,19 @@
 
     <header class="menu">
         <div class="menu__content">
-            <nav class="menu__nav nav">
-                <ul class="nav__list">
-                    <li class="nav__item btn"><a href="#">Проекты</a></li>
-                    <li class="nav__item btn"><a href="#">Задачи</a></li>
-                    <li class="nav__item btn"><a href="#">Пользователи</a></li>
+            <nav class="menu__nav">
+                <ul class="menu__nav-list">
+                    <li class="menu__nav-item btn"><a href="#">Проекты</a></li>
+                    <li class="menu__nav-item btn"><a href="#">Задачи</a></li>
+                    <li class="menu__nav-item btn"><a href="#">Пользователи</a></li>
                 </ul>
             </nav>
-            
-            <div class="menu__user user-btn">
-                <div class="user-btn__avatar avatar">
+
+            <div class="menu__user-btn">
+                <div class="avatar">
                     <img src="../img/avatar.png" alt="avatar">
                 </div>
-                <div class="user-btn__arrow">
+                <div class="menu__user-arrow">
                     <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M6.99999 4.95L2.04999 0L0.635986 1.414L6.99999 7.778L13.364 1.414L11.95 0L6.99999 4.95Z"/>
                     </svg>
