--- a/project-item/index.html
+++ b/project-item/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/base/reset.css">
+    <link rel="stylesheet" href="../css/base/reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Project-item</title>
 </head>
@@ -21,11 +21,11 @@
                 <div class="element__content-footer">
                     <div class="element__content-info">
                         <div class="element__content-code">#1</div>
-                        <div class="element__content-created timestamp">Иванов И.И. создал 1 час назад</div>
+                        <div class="timestamp">Иванов И.И. создал 1 час назад</div>
                     </div>
         
                     <div class="element__content-changing">
-                        <div class="element__content-changed timestamp">Баранов В.В. изменил 1 минуту назад</div>
+                        <div class="timestamp">Баранов В.В. изменил 1 минуту назад</div>
                     </div>
                 </div>
             </div>
