--- a/task-item/index.html
+++ b/task-item/index.html
@@ -16,7 +16,7 @@
             <div class="element__content">
                 <div class="element__content-header">
                     <div class="element__content-name">Название</div>
-                    <div class="element__content-avatar avatar">
+                    <div class="avatar">
                         <img src="../img/avatar.png" alt="avatar">
                     </div>
                 </div>
@@ -25,11 +25,11 @@
                     <div class="element__content-info">
                         <div class="element__content-code">#1</div>
                         <div class="element__content-created timestamp">Иванов И.И. создал 1 час назад</div>
-                        <div class="element__content-status status">Черновик</div>
+                        <div class="status">Черновик</div>
                     </div>
         
                     <div class="element__content-changing">
-                        <div class="element__content-changed timestamp">Баранов В.В. изменил 1 минуту назад</div>
+                        <div class="timestamp">Баранов В.В. изменил 1 минуту назад</div>
                     </div>
                 </div>
             </div>
